# AI-Project-Manager-Portfolio-Generator

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  test_portfolio_service.py
.github/workflows/: deploy.yml
database/: README.md  app.db  schema.sql
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: .nav.yml  Heidi's_diary.md  Heidis_diary.md  Jonin_paivakirja.md  Jonis_diary.md  index.md  paivakirja.md  yhteenveto.md
docs/docs/projektiraportti/: 00-ohjeet.md  01-projektisuunnitelma.md  02-vaatimukset.md  03-data-aineisto.md  04-arkkitehtuuri.md  05-menetelmat.md  05-menetelmät.md  06-tulokset.md  07-pohdinta.md  08-liitteet.md
services/: README.md
services/analysis-service/: Dockerfile
services/analysis-service/app/: main.py
services/docs-service/: Dockerfile  requirements.txt
services/docs-service/app/: main.py
services/github-service/: Dockerfile  requirements.txt
services/github-service/app/: main.py
services/portfolio-service/: Dockerfile
services/portfolio-service/app/: main.py
services/streamlit/: Dockerfile  README.md  app.py  requirements.txt
services/streamlit/.streamlit/: config.toml
shared/: README.md
shared/database/: db.py
tests/: test_analysis_service.py  test_db.py  test_docs_service.py  test_github_service.py  test_portfolio_service.py
