[project]
name = "oppimispaivakirja-ai-project-manager-portfolio-generator"
version = "0.42.0"
description = "A script dependency helper for student learning diary."
readme = "README.md"
requires-python = ">=3.12,<4.0"

authors = [
    { name = "Heidi Pappila, Joni Kauppinen" }
]

dependencies = [
    "mkdocs-material",
    "mkdocs-awesome-nav"
]
